chore: correction and clear

--- a/src/mails/question-reply.ejs
+++ b/src/mails/question-reply.ejs
@@ -7,7 +7,9 @@
   </head>
   <body>
     <p>Hello <%= name %>,</p>
-    <p>new reply has been added to your question in the video "<% title %>".</p>
+    <p>
+      new reply has been added to your question in the video "<%= title %>".
+    </p>
     <p>
       Please login to our website to view the reply and continue the discussion.
     </p>
